creating the first version of html

--- a/style.css
+++ b/style.css
@@ -2,5 +2,5 @@ body{
     min-height: 100vh;
     margin: 0;
     font-family: Arial, sans-serif;
-    background: linear-gradient(135deg, #89f7fe 0%, #66a6ff 100%);
+    background: linear-gradient(135deg, #000000 0%, #000000 100%);
 }
