--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     background: #000000;
     color: #ece8e8;
+    text-align: center;
 }
 
 header {
@@ -13,6 +14,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    text-align: center;
 }
 
 header h1 {
