--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
     color: #fff;
     padding: 1rem 2rem;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
     text-align: center;
 }
