--- a/style.css
+++ b/style.css
@@ -14,6 +14,16 @@ header {
     text-align: center;
 }
 
+#home {
+    background: #ffe082;
+    color: #222;
+    min-height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 nav a {
     color: #fff;
     margin: 0 1rem;
