--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background: #333;
+    background: #ffe082;
     color: #fff;
     padding: 1rem 2rem;
     text-align: center;
@@ -16,7 +16,7 @@ header {
 #home {
     background: #ffe082;
     color: #222;
-    min-height: 60vh;
+    min-height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
